force-app/main/default/objects/Object_Lock__c/Object_Lock__c.object-meta.xml
<CustomObject>
    <label>Object Lock</label>
    <nameField>
        <displayFormat>OBJLCK-{0000}</displayFormat>
        <label>Object Lock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Locks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>