force-app/main/default/objects/Object_Lock__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>Time after which this lock is no longer valid.</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>