force-app/main/default/objects/Object_Lock__c/fields/sObject_Id__c.field-meta.xml
<CustomField>
    <fullName>sObject_Id__c</fullName>
    <description>Record ID of the sObject being locked.</description>
    <label>sObject ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>