force-app/main/default/objects/Object_Lock__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that owns this lock.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Object_Locks</relationshipName>
    <type>Lookup</type>
</CustomField>